NXP-16288: Fix inheritance on word-wrap to use ellipsis

--- a/nuxeo-dm/nuxeo-platform-webapp-core/src/main/resources/themes/css/tabs_content.css
+++ b/nuxeo-dm/nuxeo-platform-webapp-core/src/main/resources/themes/css/tabs_content.css
@@ -428,6 +428,7 @@ author: lkemen@nuxeo.com
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  word-wrap: normal;
   width: 15em }
 
 .bubbleBox.bubbleListing span:not(.documentTitle) {
